add api of validator commission info
