# backend/docs/swagger.yaml
@@ -1143,6 +1143,17 @@ definitions:
       type:
         type: string
     type: object
+  vo.TokenStatStr:
+    properties:
+      bonded:
+        type: string
+      circulation:
+        type: string
+      foundation_bonded:
+        type: string
+      total_supply:
+        type: string
+    type: object
   vo.Tx:
     properties:
       Signer:
@@ -1172,7 +1183,14 @@ definitions:
     properties:
       date:
         type: string
+      delegator_num:
+        type: integer
       num:
+        type: integer
+      token_stat:
+        $ref: '#/definitions/vo.TokenStatStr'
+        type: object
+      total_acc_num:
         type: integer
     type: object
   vo.TxNumGroupByDayVoRespond:
@@ -1180,7 +1198,14 @@ definitions:
       properties:
         date:
           type: string
+        delegator_num:
+          type: integer
         num:
+          type: integer
+        token_stat:
+          $ref: '#/definitions/vo.TokenStatStr'
+          type: object
+        total_acc_num:
           type: integer
       type: object
     type: array
@@ -1272,6 +1297,17 @@ definitions:
       voting_power:
         description: Voting power if pubKey is a considered a validator
         type: integer
+    type: object
+  vo.ValidatorCommissionInfo:
+    properties:
+      bonded_tokens:
+        type: string
+      commission_rate:
+        type: string
+      moniker:
+        type: string
+      operator_address:
+        type: string
     type: object
   vo.ValidatorDepositTx:
     properties:
@@ -2393,6 +2429,28 @@ paths:
             $ref: '#/definitions/utils.CoinsAsStr'
             type: object
       summary: commission-rewards
+      tags:
+      - stake
+  /api/stake/validators/{validatorAddr}/commission_info:
+    get:
+      consumes:
+      - application/json
+      description: get commission_info
+      parameters:
+      - description: validatorAddr
+        in: path
+        name: validatorAddr
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success
+          schema:
+            $ref: '#/definitions/vo.ValidatorCommissionInfo'
+            type: object
+      summary: commission_info
       tags:
       - stake
   /api/stake/validators/{validatorAddr}/delegations:
